--- a/templates/cupsd.conf.j2
+++ b/templates/cupsd.conf.j2
@@ -31,12 +31,14 @@ WebInterface {{ cups_web_interface }}
 {% for location in cups_locations %}
 <Location {{ location.name }}>
   Order {{ location.order }}
-
-{% if location.authtype is defined %}  AuthType {{ location.authtype }}{% endif %}
-
-{% if location.require is defined %}  require {{ location.require }}{% endif %}
-
+{% if location.authtype is defined %}
+  AuthType {{ location.authtype }}
+{% endif %}
+{% if location.require is defined %}
+  require {{ location.require }}
+{% endif %}
 </Location>
+
 {% endfor %}
 
 # Set the default printer/job policies...
